# tsp_app

./: .flake8  AGENTS.md  README.md  pyproject.toml  setup.cfg
samples/: large_sample.csv  minimal_sample.csv
src/tsp/: __init__.py
src/tsp/algorithms/: constructive.py
src/tsp/io/: csv_reader.py
src/tsp/models/: graph.py
tests/: test_algorithms.py  test_graph.py  test_io_csv_reader.py  test_three_opt.py  test_two_opt.py
